@@ -45,29 +45,6 @@ test cookfsPkgPath-2.1 {Check paths for Tcl Modules} -setup {
     set ok ok
 } -result ok
 
-# Run Tk tests in a separate process to avoid its impact on the current process
-
-test cookfsPkgPath-3.1 {Check ::tk_library} -setup {
-    set script [makeFile {
-        package require Tk
-        puts -nonewline [list $tk_library [lsort $auto_path]]
-        exit
-    } temp.tcl]
-} -body {
-    set result [exec [interpreter] $script]
-} -cleanup {
-    file delete -force $script
-    unset -nocomplain script result
-} -result [list \
-    [file join $::cookit::root lib tk$tcl_version] \
-    [lsort [list \
-        [file join $::cookit::root lib] \
-        [file join $::cookit::root lib tcl$tcl_version] \
-        [file join $::cookit::root lib tk$tcl_version] \
-        [file join $::cookit::root lib tk$tcl_version ttk] \
-    ]] \
-]
-
 test cookfsPkgPath-4.1 {Check that environment variables TCL*_TM_PATH are unset} -setup {
 
     lassign [split $tcl_version .] major minor
@@ -162,40 +139,6 @@ test cookfsPkgPath-6.1 {Make sure that TCL_LIBRARY environment variable is ignor
         [file join $::cookit::root lib tcl$tcl_version] \
     ]] \
 ]
-
-test cookfsPkgPath-7.1 {Make sure that TK_LIBRARY environment variable is ignored} -setup {
-
-    if { [info exists ::env(TK_LIBRARY)] } {
-        set save_env $::env(TK_LIBRARY)
-    } else {
-        unset -nocomplain save_env
-    }
-
-    set ::env(TK_LIBRARY) /foo/bar
-
-    set script [makeFile {
-        package require Tk
-        puts [list [info exists ::env(TK_LIBRARY)] $::tk_library [lsort $::auto_path]]
-        exit
-    } temp.tcl]
-
-} -body {
-    set result [exec [interpreter] $script]
-} -cleanup {
-    if { [info exists save_env] } { set ::env(TK_LIBRARY) $save_env } { unset ::env(TK_LIBRARY) }
-    file delete -force $script
-    unset -nocomplain script result save_env
-} -result [list \
-    0 \
-    [file join $::cookit::root lib tk$tcl_version] \
-    [lsort [list \
-        [file join $::cookit::root lib] \
-        [file join $::cookit::root lib tcl$tcl_version] \
-        [file join $::cookit::root lib tk$tcl_version] \
-        [file join $::cookit::root lib tk$tcl_version ttk] \
-    ]] \
-]
-
 
 # cleanup
 ::tcltest::cleanupTests
