@@ -1,3 +1,6 @@
+2024-09-08 Konstantin Kushnir <chpock@gmail.com>
+	* Add separate versions for console and GUI
+
 2024-09-07 Konstantin Kushnir <chpock@gmail.com>
 	* Rebrand to cookit 2.0 and change license
 
